--- a/codeblocks/default.conf
+++ b/codeblocks/default.conf
@@ -381,7 +381,7 @@
 					</NAME>
 					<DATA>
 						<str>
-							<![CDATA[layout2|name=ManagementPane;caption=Management;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=100;minh=100;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=MessagesPane;caption=Logs & others;state=2099198;dir=3;layer=0;row=0;pos=0;prop=100000;bestw=1904;besth=135;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CallStackPane;caption=Call stack;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=150;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=150|name=BreakpointsPane;caption=Breakpoints;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=CPURegistersPane;caption=CPU Registers;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=DisassemblyPane;caption=Disassembly;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=ExamineMemoryPane;caption=Memory;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=450;besth=250;minw=350;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=250|name=ThreadsPane;caption=Running threads;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=75;minw=250;minh=75;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=75|name=WatchesPane;caption=Watches;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=150;floath=250|name=MainPane;caption=;state=17152;dir=5;layer=0;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ScriptConsole;caption=Scripting console;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=303;besth=100;minw=100;minh=100;maxw=-1;maxh=-1;floatx=300;floaty=200;floatw=-1;floath=-1|name=Tools;caption=Tool Output;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=400;besth=300;minw=200;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=400;floath=300|name=HighlightedOccurrences;caption=Highlighted Occurrences;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=MANViewer;caption=Man/Html pages viewer;state=2099198;dir=2;layer=0;row=0;pos=0;prop=100000;bestw=320;besth=240;minw=240;minh=160;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=320;floath=240|name=OpenFilesPane;caption=Open files list;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=DefMimeHandler_HTMLViewer;caption=HTML viewer;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=TodoListPanev2.0.0;caption=Todo list;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=352;besth=94;minw=352;minh=94;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=352;floath=94|name=CodeSnippetsPane;caption=CodeSnippets;state=2099199;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=300;besth=400;minw=30;minh=40;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=300;floath=400|name=MainToolbar;caption=Main Toolbar;state=2108158;dir=1;layer=10;row=0;pos=0;prop=100000;bestw=336;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CompilerToolbar;caption=Compiler Toolbar;state=2108158;dir=1;layer=10;row=0;pos=336;prop=100000;bestw=311;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DebuggerToolbar;caption=Debugger Toolbar;state=2108158;dir=1;layer=10;row=0;pos=647;prop=100000;bestw=322;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CodeCompletionToolbar;caption=Code completion Toolbar;state=2108158;dir=1;layer=10;row=1;pos=0;prop=100000;bestw=947;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ThreadSearchToolbar;caption=ThreadSearch Toolbar;state=2108158;dir=1;layer=10;row=1;pos=947;prop=100000;bestw=193;besth=45;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=NassiShneidermanPluginToolbar;caption=NassiShneidermanPlugin Toolbar;state=2108158;dir=1;layer=10;row=2;pos=0;prop=100000;bestw=469;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=BrowseTrackerToolbar;caption=BrowseTracker Toolbar;state=2108158;dir=1;layer=10;row=2;pos=469;prop=100000;bestw=182;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=IncrementalSearchToolbar;caption=IncrementalSearch Toolbar;state=2108158;dir=1;layer=10;row=2;pos=651;prop=100000;bestw=370;besth=45;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DoxyBlocksToolbar;caption=DoxyBlocks Toolbar;state=2108158;dir=1;layer=10;row=2;pos=1021;prop=100000;bestw=224;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|dock_size(5,0,0)=22|]]>
+							<![CDATA[layout2|name=ManagementPane;caption=Management;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=100;minh=100;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=MessagesPane;caption=Logs & others;state=2099198;dir=3;layer=0;row=0;pos=0;prop=100000;bestw=1904;besth=135;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CallStackPane;caption=Call stack;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=150;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=150|name=BreakpointsPane;caption=Breakpoints;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=CPURegistersPane;caption=CPU Registers;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=DisassemblyPane;caption=Disassembly;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=ExamineMemoryPane;caption=Memory;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=450;besth=250;minw=350;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=250|name=ThreadsPane;caption=Running threads;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=75;minw=250;minh=75;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=75|name=WatchesPane;caption=Watches;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=150;floath=250|name=MainPane;caption=;state=17152;dir=5;layer=0;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ScriptConsole;caption=Scripting console;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=303;besth=100;minw=100;minh=100;maxw=-1;maxh=-1;floatx=300;floaty=200;floatw=-1;floath=-1|name=Tools;caption=Tool Output;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=400;besth=300;minw=200;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=400;floath=300|name=HighlightedOccurrences;caption=Highlighted Occurrences;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=MANViewer;caption=Man/Html pages viewer;state=2099198;dir=2;layer=0;row=0;pos=0;prop=100000;bestw=320;besth=240;minw=240;minh=160;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=320;floath=240|name=OpenFilesPane;caption=Open files list;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=DefMimeHandler_HTMLViewer;caption=HTML viewer;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=TodoListPanev2.0.0;caption=Todo list;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=352;besth=94;minw=352;minh=94;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=352;floath=94|name=CodeSnippetsPane;caption=CodeSnippets;state=2099199;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=300;besth=400;minw=30;minh=40;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=300;floath=400|name=MainToolbar;caption=Main Toolbar;state=2108158;dir=1;layer=10;row=0;pos=0;prop=100000;bestw=336;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CompilerToolbar;caption=Compiler Toolbar;state=2108158;dir=1;layer=10;row=0;pos=336;prop=100000;bestw=311;besth=42;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DebuggerToolbar;caption=Debugger Toolbar;state=2108158;dir=1;layer=10;row=0;pos=647;prop=100000;bestw=322;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CodeCompletionToolbar;caption=Code completion Toolbar;state=2108158;dir=1;layer=10;row=1;pos=0;prop=100000;bestw=947;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ThreadSearchToolbar;caption=ThreadSearch Toolbar;state=2108158;dir=1;layer=10;row=1;pos=947;prop=100000;bestw=193;besth=45;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=NassiShneidermanPluginToolbar;caption=NassiShneidermanPlugin Toolbar;state=2108158;dir=1;layer=10;row=2;pos=0;prop=100000;bestw=469;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=BrowseTrackerToolbar;caption=BrowseTracker Toolbar;state=2108158;dir=1;layer=10;row=2;pos=469;prop=100000;bestw=182;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=IncrementalSearchToolbar;caption=IncrementalSearch Toolbar;state=2108158;dir=1;layer=10;row=2;pos=651;prop=100000;bestw=370;besth=45;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DoxyBlocksToolbar;caption=DoxyBlocks Toolbar;state=2108158;dir=1;layer=10;row=2;pos=1021;prop=100000;bestw=224;besth=35;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|dock_size(5,0,0)=22|]]>
 						</str>
 					</DATA>
 					<DATAMESSAGEPANE>
@@ -438,7 +438,7 @@
 		</CONSOLE_SHELL>
 		<CONSOLE_TERMINAL>
 			<str>
-				<![CDATA[xterm -T $TITLE -e]]>
+				<![CDATA[st -e ]]>
 			</str>
 		</CONSOLE_TERMINAL>
 		<OPEN_CONTAINING_FOLDER>
@@ -4321,7 +4321,7 @@
 			<ALPHA_PERMANENTLY int="100" />
 			<BORDER_ALPHA_PERMANENTLY int="255" />
 		</highlight_occurrence>
-		<ZOOM int="7" />
+		<ZOOM int="8" />
 		<default_code>
 			<SET10>
 				<str>
@@ -4387,12 +4387,12 @@
 				</LANGUAGE>
 				<NAME>
 					<str>
-						<![CDATA[fun]]>
+						<![CDATA[sub]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
-						<![CDATA[function |()\n    \nend function\n]]>
+						<![CDATA[subroutine |()\n    \nend subroutine\n]]>
 					</str>
 				</CODE>
 			</entry1>
@@ -4404,12 +4404,12 @@
 				</LANGUAGE>
 				<NAME>
 					<str>
-						<![CDATA[sub]]>
+						<![CDATA[fun]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
-						<![CDATA[subroutine |()\n    \nend subroutine\n]]>
+						<![CDATA[function |()\n    \nend function\n]]>
 					</str>
 				</CODE>
 			</entry2>
@@ -4614,24 +4614,24 @@
 			<entry17>
 				<NAME>
 					<str>
-						<![CDATA[guard]]>
-					</str>
-				</NAME>
-				<CODE>
-					<str>
-						<![CDATA[#ifndef $(Guard token)\n#define $(Guard token)\n\n|\n\n#endif // $(Guard token)\n]]>
-					</str>
-				</CODE>
-			</entry17>
-			<entry18>
-				<NAME>
-					<str>
 						<![CDATA[tday]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
 						<![CDATA[$TDAY]]>
+					</str>
+				</CODE>
+			</entry17>
+			<entry18>
+				<NAME>
+					<str>
+						<![CDATA[guard]]>
+					</str>
+				</NAME>
+				<CODE>
+					<str>
+						<![CDATA[#ifndef $(Guard token)\n#define $(Guard token)\n\n|\n\n#endif // $(Guard token)\n]]>
 					</str>
 				</CODE>
 			</entry18>
