--- a/config/codeblocks/default.conf
+++ b/config/codeblocks/default.conf
@@ -373,6 +373,10 @@
 				<BOTTOM_BLOCK_SELECTION int="4" />
 				<DISPLAY int="0" />
 				<MAXIMIZED bool="0" />
+				<LEFT int="6" />
+				<TOP int="30" />
+				<WIDTH int="1352" />
+				<HEIGHT int="730" />
 				<view1>
 					<NAME>
 						<str>
@@ -407,10 +411,6 @@
 						</str>
 					</DATAMESSAGEPANE>
 				</view2>
-				<LEFT int="0" />
-				<TOP int="24" />
-				<WIDTH int="1366" />
-				<HEIGHT int="744" />
 			</layout>
 		</main_frame>
 		<dialog_placement>
@@ -429,7 +429,7 @@
 		</CONSOLE_SHELL>
 		<CONSOLE_TERMINAL>
 			<str>
-				<![CDATA[st -e ]]>
+				<![CDATA[xfce4-terminal -T $TITLE -x ]]>
 			</str>
 		</CONSOLE_TERMINAL>
 		<OPEN_CONTAINING_FOLDER>
