--- a/config/picom.conf
+++ b/config/picom.conf
@@ -3,7 +3,8 @@ opacity-rule = [
     "90:class_g = 'Alacritty'",
     "90:class_g = 'st-256color'",
     "90:class_g = 'tabbed'",
-    "90:class_g = 'kitty'"
+    "90:class_g = 'kitty'",
+    "85:class_g = 'dmenu'"
 ];
 
 # Blur
