--- a/config/codeblocks/default.conf
+++ b/config/codeblocks/default.conf
@@ -370,11 +370,11 @@
 					</str>
 				</DEFAULT>
 				<LEFT_BLOCK_SELECTION int="0" />
-				<BOTTOM_BLOCK_SELECTION int="4" />
+				<BOTTOM_BLOCK_SELECTION int="11" />
 				<DISPLAY int="0" />
 				<MAXIMIZED bool="0" />
-				<LEFT int="560" />
-				<TOP int="1110" />
+				<LEFT int="6" />
+				<TOP int="30" />
 				<WIDTH int="1352" />
 				<HEIGHT int="730" />
 				<view1>
@@ -385,12 +385,12 @@
 					</NAME>
 					<DATA>
 						<str>
-							<![CDATA[layout2|name=ManagementPane;caption=Management;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=100;minh=100;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=MessagesPane;caption=Logs & others;state=2099198;dir=3;layer=0;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CallStackPane;caption=Call stack;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=150;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=150|name=BreakpointsPane;caption=Breakpoints;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=CPURegistersPane;caption=CPU Registers;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=DisassemblyPane;caption=Disassembly;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=ExamineMemoryPane;caption=Memory;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=450;besth=250;minw=350;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=250|name=ThreadsPane;caption=Running threads;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=75;minw=250;minh=75;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=75|name=WatchesPane;caption=Watches;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=150;floath=250|name=MainPane;caption=;state=17152;dir=5;layer=0;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ScriptConsole;caption=Scripting console;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=302;besth=100;minw=100;minh=100;maxw=-1;maxh=-1;floatx=300;floaty=200;floatw=-1;floath=-1|name=MANViewer;caption=Man/Html pages viewer;state=2099198;dir=2;layer=0;row=0;pos=0;prop=100000;bestw=320;besth=240;minw=240;minh=160;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=320;floath=240|name=Tools;caption=Tool Output;state=2099198;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=400;besth=300;minw=200;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=400;floath=300|name=OpenFilesPane;caption=Open files list;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=HighlightedOccurrences;caption=Highlighted Occurrences;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=DefMimeHandler_HTMLViewer;caption=HTML viewer;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=CodeSnippetsPane;caption=CodeSnippets;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=300;besth=400;minw=30;minh=40;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=300;floath=400|name=TodoListPanev2.0.0;caption=Todo list;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=352;besth=94;minw=352;minh=94;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=352;floath=94|name=MainToolbar;caption=Main Toolbar;state=2108158;dir=1;layer=10;row=0;pos=0;prop=100000;bestw=454;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CompilerToolbar;caption=Compiler Toolbar;state=2108158;dir=1;layer=10;row=0;pos=456;prop=100000;bestw=366;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DebuggerToolbar;caption=Debugger Toolbar;state=2108158;dir=1;layer=10;row=0;pos=821;prop=100000;bestw=428;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CodeCompletionToolbar;caption=Code completion Toolbar;state=2108158;dir=1;layer=10;row=1;pos=0;prop=100000;bestw=948;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DoxyBlocksToolbar;caption=DoxyBlocks Toolbar;state=2108158;dir=1;layer=10;row=1;pos=948;prop=100000;bestw=306;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=NassiShneidermanPluginToolbar;caption=NassiShneidermanPlugin Toolbar;state=2108158;dir=1;layer=10;row=2;pos=0;prop=100000;bestw=641;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ThreadSearchToolbar;caption=ThreadSearch Toolbar;state=2108158;dir=1;layer=10;row=2;pos=641;prop=100000;bestw=212;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=IncrementalSearchToolbar;caption=IncrementalSearch Toolbar;state=2108158;dir=1;layer=10;row=3;pos=0;prop=100000;bestw=440;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=BrowseTrackerToolbar;caption=BrowseTracker Toolbar;state=2108158;dir=1;layer=10;row=3;pos=440;prop=100000;bestw=243;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|dock_size(5,0,0)=22|]]>
+							<![CDATA[layout2|name=ManagementPane;caption=Management;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=100;minh=100;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=MessagesPane;caption=Logs & others;state=2099198;dir=3;layer=0;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CallStackPane;caption=Call stack;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=150;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=150|name=BreakpointsPane;caption=Breakpoints;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=CPURegistersPane;caption=CPU Registers;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=DisassemblyPane;caption=Disassembly;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=ExamineMemoryPane;caption=Memory;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=450;besth=250;minw=350;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=250|name=ThreadsPane;caption=Running threads;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=75;minw=250;minh=75;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=450;floath=75|name=WatchesPane;caption=Watches;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=150;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=150;floath=250|name=MainPane;caption=;state=17152;dir=5;layer=0;row=0;pos=0;prop=100000;bestw=20;besth=20;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ScriptConsole;caption=Scripting console;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=302;besth=100;minw=100;minh=100;maxw=-1;maxh=-1;floatx=300;floaty=200;floatw=-1;floath=-1|name=Tools;caption=Tool Output;state=2099198;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=400;besth=300;minw=200;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=400;floath=300|name=TodoListPanev2.0.0;caption=Todo list;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=352;besth=94;minw=352;minh=94;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=352;floath=94|name=OpenFilesPane;caption=Open files list;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=CodeSnippetsPane;caption=CodeSnippets;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=300;besth=400;minw=30;minh=40;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=300;floath=400|name=MANViewer;caption=Man/Html pages viewer;state=2099198;dir=2;layer=0;row=0;pos=0;prop=100000;bestw=320;besth=240;minw=240;minh=160;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=320;floath=240|name=DefMimeHandler_HTMLViewer;caption=HTML viewer;state=2099199;dir=4;layer=0;row=0;pos=0;prop=100000;bestw=350;besth=250;minw=150;minh=150;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=350;floath=250|name=HighlightedOccurrences;caption=Highlighted Occurrences;state=2099198;dir=4;layer=1;row=0;pos=0;prop=100000;bestw=150;besth=100;minw=50;minh=50;maxw=-1;maxh=-1;floatx=200;floaty=150;floatw=100;floath=150|name=MainToolbar;caption=Main Toolbar;state=2108158;dir=1;layer=10;row=0;pos=0;prop=100000;bestw=454;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CompilerToolbar;caption=Compiler Toolbar;state=2108158;dir=1;layer=10;row=0;pos=456;prop=100000;bestw=366;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DebuggerToolbar;caption=Debugger Toolbar;state=2108158;dir=1;layer=10;row=0;pos=821;prop=100000;bestw=428;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=CodeCompletionToolbar;caption=Code completion Toolbar;state=2108158;dir=1;layer=10;row=1;pos=0;prop=100000;bestw=948;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=BrowseTrackerToolbar;caption=BrowseTracker Toolbar;state=2108158;dir=1;layer=10;row=3;pos=440;prop=100000;bestw=243;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=IncrementalSearchToolbar;caption=IncrementalSearch Toolbar;state=2108158;dir=1;layer=10;row=3;pos=0;prop=100000;bestw=440;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=ThreadSearchToolbar;caption=ThreadSearch Toolbar;state=2108158;dir=1;layer=10;row=2;pos=641;prop=100000;bestw=212;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=DoxyBlocksToolbar;caption=DoxyBlocks Toolbar;state=2108158;dir=1;layer=10;row=1;pos=948;prop=100000;bestw=306;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|name=NassiShneidermanPluginToolbar;caption=NassiShneidermanPlugin Toolbar;state=2108158;dir=1;layer=10;row=2;pos=0;prop=100000;bestw=641;besth=37;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1|dock_size(5,0,0)=22|]]>
 						</str>
 					</DATA>
 					<DATAMESSAGEPANE>
 						<str>
-							<![CDATA[Code::Blocks=0;Search results=1;DoxyBlocks=2;Debugger=3;Cscope=4;Build log=5;Build messages=6;CppCheck/Vera++=7;CppCheck/Vera++ messages=8;Thread search=9;Closed files list=10;Valgrind=11;Valgrind messages=12;Cccc=13;|selection=4;]]>
+							<![CDATA[Code::Blocks=0;Search results=1;DoxyBlocks=2;Debugger=3;Cscope=4;Build log=5;Build messages=6;CppCheck/Vera++=7;CppCheck/Vera++ messages=8;Thread search=9;Closed files list=10;Valgrind=11;Valgrind messages=12;Cccc=13;|selection=11;]]>
 						</str>
 					</DATAMESSAGEPANE>
 				</view1>
@@ -429,7 +429,7 @@
 		</CONSOLE_SHELL>
 		<CONSOLE_TERMINAL>
 			<str>
-				<![CDATA[xfce4-terminal -T $TITLE -x ]]>
+				<![CDATA[xterm -T $TITLE -e]]>
 			</str>
 		</CONSOLE_TERMINAL>
 		<OPEN_CONTAINING_FOLDER>
@@ -462,7 +462,7 @@
 		<HIDE_FOLDER_NAME bool="0" />
 		<DEFAULT_PATH>
 			<str>
-				<![CDATA[/home/alexian/Projects/codeblocks]]>
+				<![CDATA[/home/alexian/Projects/codeblocks/]]>
 			</str>
 		</DEFAULT_PATH>
 		<OPEN_FILES int="1" />
@@ -4245,7 +4245,7 @@
 		<selection />
 		<default_encoding />
 		<default_code />
-		<ZOOM int="6" />
+		<ZOOM int="3" />
 		<reopen_editor />
 		<incremental_search>
 			<LAST_SEARCHED_ITEMS>
@@ -4264,12 +4264,12 @@
 				</LANGUAGE>
 				<NAME>
 					<str>
-						<![CDATA[sub]]>
+						<![CDATA[fun]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
-						<![CDATA[subroutine |()\n    \nend subroutine\n]]>
+						<![CDATA[function |()\n    \nend function\n]]>
 					</str>
 				</CODE>
 			</entry1>
@@ -4281,12 +4281,12 @@
 				</LANGUAGE>
 				<NAME>
 					<str>
-						<![CDATA[fun]]>
+						<![CDATA[sub]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
-						<![CDATA[function |()\n    \nend function\n]]>
+						<![CDATA[subroutine |()\n    \nend subroutine\n]]>
 					</str>
 				</CODE>
 			</entry2>
@@ -4491,24 +4491,24 @@
 			<entry17>
 				<NAME>
 					<str>
-						<![CDATA[tday]]>
-					</str>
-				</NAME>
-				<CODE>
-					<str>
-						<![CDATA[$TDAY]]>
-					</str>
-				</CODE>
-			</entry17>
-			<entry18>
-				<NAME>
-					<str>
 						<![CDATA[guard]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
 						<![CDATA[#ifndef $(Guard token)\n#define $(Guard token)\n\n|\n\n#endif // $(Guard token)\n]]>
+					</str>
+				</CODE>
+			</entry17>
+			<entry18>
+				<NAME>
+					<str>
+						<![CDATA[tday]]>
+					</str>
+				</NAME>
+				<CODE>
+					<str>
+						<![CDATA[$TDAY]]>
 					</str>
 				</CODE>
 			</entry18>
@@ -4809,40 +4809,6 @@
 					</str>
 				</MASTER_PATH>
 			</arm_elf_gcc>
-			<avr_gcc>
-				<NAME>
-					<str>
-						<![CDATA[GNU GCC Compiler for AVR]]>
-					</str>
-				</NAME>
-				<MASTER_PATH>
-					<str>
-						<![CDATA[/usr]]>
-					</str>
-				</MASTER_PATH>
-			</avr_gcc>
-			<zpu_gcc>
-				<NAME>
-					<str>
-						<![CDATA[GNU GCC Compiler for ZPU]]>
-					</str>
-				</NAME>
-				<INCLUDE_DIRS>
-					<str>
-						<![CDATA[/usr/include;]]>
-					</str>
-				</INCLUDE_DIRS>
-				<LIBRARY_DIRS>
-					<str>
-						<![CDATA[/usr/lib;]]>
-					</str>
-				</LIBRARY_DIRS>
-				<MASTER_PATH>
-					<str>
-						<![CDATA[/usr]]>
-					</str>
-				</MASTER_PATH>
-			</zpu_gcc>
 			<lm8_gcc>
 				<NAME>
 					<str>
@@ -4865,6 +4831,52 @@
 					</str>
 				</MASTER_PATH>
 			</lm8_gcc>
+			<avr_gcc>
+				<NAME>
+					<str>
+						<![CDATA[GNU GCC Compiler for AVR]]>
+					</str>
+				</NAME>
+				<MASTER_PATH>
+					<str>
+						<![CDATA[/usr]]>
+					</str>
+				</MASTER_PATH>
+			</avr_gcc>
+			<bfin_elf_gcc>
+				<NAME>
+					<str>
+						<![CDATA[GNU GCC Compiler for Blackfin]]>
+					</str>
+				</NAME>
+				<MASTER_PATH>
+					<str>
+						<![CDATA[/usr]]>
+					</str>
+				</MASTER_PATH>
+			</bfin_elf_gcc>
+			<zpu_gcc>
+				<NAME>
+					<str>
+						<![CDATA[GNU GCC Compiler for ZPU]]>
+					</str>
+				</NAME>
+				<INCLUDE_DIRS>
+					<str>
+						<![CDATA[/usr/include;]]>
+					</str>
+				</INCLUDE_DIRS>
+				<LIBRARY_DIRS>
+					<str>
+						<![CDATA[/usr/lib;]]>
+					</str>
+				</LIBRARY_DIRS>
+				<MASTER_PATH>
+					<str>
+						<![CDATA[/usr]]>
+					</str>
+				</MASTER_PATH>
+			</zpu_gcc>
 			<android_gcc>
 				<NAME>
 					<str>
@@ -4909,18 +4921,6 @@
 					</str>
 				</MASTER_PATH>
 			</lm32_gcc>
-			<bfin_elf_gcc>
-				<NAME>
-					<str>
-						<![CDATA[GNU GCC Compiler for Blackfin]]>
-					</str>
-				</NAME>
-				<MASTER_PATH>
-					<str>
-						<![CDATA[/usr]]>
-					</str>
-				</MASTER_PATH>
-			</bfin_elf_gcc>
 			<msp430_gcc>
 				<NAME>
 					<str>
