--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -59,7 +59,7 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #cccccc
+cursor #f19618
 
 #: Default cursor color
 
@@ -374,8 +374,8 @@ inactive_tab_font_style normal
 
 #: Color scheme {{{
 
-foreground #dddddd
-background #000000
+foreground #e5e1cf
+background #0e1419
 
 #: The foreground and background colors
 
@@ -403,8 +403,8 @@ dim_opacity 0.75
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #000000
-selection_background #FFFACD
+selection_foreground #0e1419
+selection_background #243340
 
 #: The foreground and background for text selected with the mouse
 
@@ -413,45 +413,31 @@ selection_background #FFFACD
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
+#: black 0, 8
+#: red 1, 9
+#: green 2, 10
+#: yellow 3, 11
+#: blue 4, 12
+#: magenta 5, 13
+#: cyan 6, 14
+#: white 7, 15
+
 color0 #000000
-color8 #767676
-
-#: black
-
-color1 #cc0403
-color9 #f2201f
-
-#: red
-
-color2  #19cb00
-color10 #23fd00
-
-#: green
-
-color3  #cecb00
-color11 #fffd00
-
-#: yellow
-
-color4  #0d73cc
-color12 #1a8fff
-
-#: blue
-
-color5  #cb1ed1
-color13 #fd28ff
-
-#: magenta
-
-color6  #0dcdcd
-color14 #14ffff
-
-#: cyan
-
-color7  #dddddd
+color8 #323232
+color1 #ff3333
+color9 #ff6565
+color2 #b8cc52
+color10 #e9fe83
+color3 #e6c446
+color11 #fff778
+color4 #36a3d9
+color12 #68d4ff
+color5 #f07078
+color13 #ffa3aa
+color6 #95e5cb
+color14 #c7fffc
+color7 #ffffff
 color15 #ffffff
-
-#: white
 
 #: }}}
 
