--- a/config/picom.conf
+++ b/config/picom.conf
@@ -1,27 +1,27 @@
 opacity-rule = [
-    "90:class_g = 'URxvt'",
-    "90:class_g = 'Alacritty'",
-    "90:class_g = 'st-256color'",
-    "90:class_g = 'tabbed'",
-    "90:class_g = 'kitty'",
+#    "90:class_g = 'URxvt'",
+#    "90:class_g = 'Alacritty'",
+#    "90:class_g = 'st-256color'",
+#    "90:class_g = 'tabbed'",
+#    "90:class_g = 'kitty'",
     "85:class_g = 'dmenu'"
 ];
 
 # Blur
-blur:
-{
-  method = "dual_kawase";
-  strength = 3;
-}
+#blur:
+#{
+#  method = "dual_kawase";
+#  strength = 3;
+#}
 
-wintypes:
-{
-  normal = { blur-background = true; };
-  splash = { blur-background = false; };
-};
+#wintypes:
+#{
+#  normal = { blur-background = true; };
+#  splash = { blur-background = false; };
+#};
 
 # Fading
-fading = false;
+fading = true;
 fade-in-step = 0.07;
 fade-out-step = 0.07;
 fade-exclude = [ ];
