--- a/home/.aliasrc
+++ b/home/.aliasrc
@@ -7,12 +7,12 @@ alias vim="nvim"
 # package management
 #
 # apt/apltitude
-alias apts="aptitude search" # search for package
-alias apti="sudo aptitude install" # install package
-alias aptr="sudo aptitude remove" # remove package
-alias aptp="sudo aptitude purge" # remove package and configs
-alias aptu="sudo aptitude update && sudo aptitude upgrade" # update packages
-alias aptsi="apt list --installed | grep" # search installed packages
+#alias apts="aptitude search" # search for package
+#alias apti="sudo aptitude install" # install package
+#alias aptr="sudo aptitude remove" # remove package
+#alias aptp="sudo aptitude purge" # remove package and configs
+#alias aptu="sudo aptitude update && sudo aptitude upgrade" # update packages
+#alias aptsi="apt list --installed | grep" # search installed packages
 #
 # pacman/yay
 #alias pacss="pacman -Ss" # search for standard package
