--- a/config/picom.conf
+++ b/config/picom.conf
@@ -8,17 +8,20 @@ opacity-rule = [
 ];
 
 # Blur
-#blur:
-#{
-#  method = "dual_kawase";
-#  strength = 3;
-#}
+blur:
+{
+  method = "dual_kawase";
+  strength = 3;
+}
 
-#wintypes:
-#{
-#  normal = { blur-background = true; };
-#  splash = { blur-background = false; };
-#};
+wintypes:
+{
+  normal = { blur-background = true; };
+  splash = { blur-background = false; };
+};
+
+# Shadows
+shadow = true;
 
 # Fading
 fading = true;
