Updated for Trisquel

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -3,16 +3,19 @@
 # Enable/disable featues
 ALACRITTY=false
 ALIASRC=true
-AWESOME=false
+AWESOME=true
 BASHRC=true
 HTOP=true
 KITTY=false
 NEOVIM=false
 PFETCH=true
-PICOM=false
-PROFILE=false
+PICOM=true
+PROFILE=true
 STARSHIP=true
 VIMRC=true
-VOLUMEICON=false
-XRESOURCES=false
+VOLUMEICON=true
+XRESOURCES=true
 ZSHRC=true
+DMENU=true
+WICD=false
+REDSHIFT=true
